deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: webhook-demo
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
        extralabel: hihi
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1234
      containers:
      - name: server
        image: gilcredo/my-admission-controller-webhook #gilcredo/my-webhook-server #stackrox/admission-controller-webhook-demo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
          name: webhook-api
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /run/secrets/tls
          readOnly: true
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: webhook-server-tls
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: webhook-demo
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: demo-webhook
webhooks:
  - name: webhook-server.webhook-demo.svc
    clientConfig:
      service:
        name: webhook-server
        namespace: webhook-demo
        path: "/mutate"
      caBundle: ${CA_PEM_B64}
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
---
#https://github.com/kubeflow/manifests/blob/master/admission-webhook/webhook/overlays/cert-manager/certificate.yaml
#apiVersion: cert-manager.io/v1alpha2
#kind: Certificate
#metadata:
#  name: admission-webhook-cert
#spec:
#  isCA: true
#  commonName: webhook-server.webhook-demo.svc
#  dnsNames:
#  - webhook-server.webhook-demo.svc
#  - webhook-server.webhook-demo.svc.cluster.local
#  issuerRef:
#    kind: ClusterIssuer
#    name: kubeflow-self-signing-issuer
#  secretName: webhook-certs
